[package]
name = "python-rust-arm"
version = "1.0.0"
authors = ["Joshua J. Daymude <jdaymude@asu.edu>"]
edition = "2018"

[lib]
name = "arm"
crate-type = ["dylib"]

[dependencies]
ndarray = '^0.15.0'
rand = '^0.8.0'
rand_distr = '^0.4.0'

[dependencies.cpython]
version = '0.6'
features = ["extension-module"]
